--- a/wp-content/themes/project-name/style.css
+++ b/wp-content/themes/project-name/style.css
@@ -1,16 +1,16 @@
 /*
-Theme Name: project-name WordPress Theme
-Theme URI:
-Author: HAMWORKS Co., Ltd.
-Author URI:
-Description:
+Theme Name: project-name
+Theme URI: 
+Author: 
+Author URI: 
+Description: 
 Requires at least: 6.8
 Tested up to: 6.8
-Requires PHP: 8.1
-Version: 0.1
+Requires PHP: 5.7
+Version: 
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: project-name
-Tags:
+Tags: 
 */
 
