--- a/wp-content/themes/project-name/templates/index.html
+++ b/wp-content/themes/project-name/templates/index.html
@@ -2,8 +2,8 @@
 
 <!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
 <main class="wp-block-group">
-	<!-- wp:query {"queryId":0,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true,"taxQuery":null,"parents":[]},"layout":{"type":"default"}} -->
-	<div class="wp-block-query">
+	<!-- wp:query {"queryId":0,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true,"taxQuery":null,"parents":[],"format":[]},"align":"full","layout":{"type":"default"}} -->
+	<div class="wp-block-query alignfull">
 		<!-- wp:post-template {"layout":{"type":"default"}} -->
 		<!-- wp:group {"layout":{"type":"constrained"}} -->
 		<div class="wp-block-group">
@@ -14,10 +14,10 @@
 				<!-- wp:post-author {"showAvatar":false,"showBio":false} /-->
 				<!-- wp:post-date {"isLink":true} /-->
 				<!-- wp:post-terms {"term":"category"} /-->
-				<!-- wp:post-terms {"term": "post_tag"} /-->
+				<!-- wp:post-terms {"term":"post_tag"} /-->
 			</div>
 			<!-- /wp:group -->
-			<!-- wp:spacer {"height":40} -->
+			<!-- wp:spacer {"height":"40px"} -->
 			<div style="height:40px" aria-hidden="true" class="wp-block-spacer"></div>
 			<!-- /wp:spacer -->
 		</div>
