--- a/wp-content/themes/project-name/templates/index.html
+++ b/wp-content/themes/project-name/templates/index.html
@@ -2,7 +2,7 @@
 
 <!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
 <main class="wp-block-group">
-	<!-- wp:query {"queryId":0,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true,"taxQuery":null,"parents":[],"format":[]},"align":"full","layout":{"type":"default"}} -->
+	<!-- wp:query {"align":"full","layout":{"type":"default"}} -->
 	<div class="wp-block-query alignfull">
 		<!-- wp:post-template {"layout":{"type":"default"}} -->
 		<!-- wp:group {"layout":{"type":"constrained"}} -->
