feat: support global padding for posts

--- a/wp-content/themes/project-name/templates/index.html
+++ b/wp-content/themes/project-name/templates/index.html
@@ -4,9 +4,9 @@
 <main class="wp-block-group">
 	<!-- wp:query {"align":"full","layout":{"type":"default"}} -->
 	<div class="wp-block-query alignfull">
-		<!-- wp:post-template {"layout":{"type":"default"}} -->
-		<!-- wp:group {"layout":{"type":"constrained"}} -->
-		<div class="wp-block-group">
+		<!-- wp:post-template {"align":"full","layout":{"type":"default"}} -->
+		<!-- wp:group {"align":"full","layout":{"type":"constrained"}} -->
+		<div class="wp-block-group alignfull">
 			<!-- wp:post-title {"isLink":true} /-->
 			<!-- wp:post-content {"align":"full","layout":{"type":"constrained"}} /-->
 			<!-- wp:group {"style":{"typography":{"fontSize":"14px"}},"layout":{"type":"flex"}} -->
